# ProjetC21

projetc/: Makefile  config.status  projetc.glade
projetc/autom4te.cache/: requests
projetc/src/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  interface.c  interface.c.bak  interface.h.bak  main.c  projetc
projetc1/: Makefile  config.status  projetc.glade
projetc1/autom4te.cache/: requests
projetc1/src/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  interface.c  interface.h.bak  main.c  menu.txt  projetc
projetc10/: Makefile  config.status  projetc.glade.bak
projetc10/autom4te.cache/: requests
projetc10/src/: Foyer.txt  Makefile  callbacks.c  callbacks.h  fonction.h  foyer.c  interface.c  interface.h  menu.txt  projetc
projetc11/: Makefile  config.status  projetc.glade
projetc11/autom4te.cache/: requests
projetc11/src/: Makefile  Makefile.in  Reclamations.txt  admin.txt  fonction.c  interface.c.bak  mouvement.txt  nutritionniste.c  nutritionniste.h  produit.txt  projetc
projetc2/: Makefile  config.status  projetc.glade.bak
projetc2/src/: Makefile  (+9 more)
projetc3/: Makefile  config.status  projetc.glade.bak
projetc4/: Makefile  config.status  projetc.glade
projetc5/: Makefile  config.status  projetc.glade
projetc6/: Makefile  config.status  projetc.glade.bak
projetc7/: Makefile  projetc.glade.bak
projetc8/: config.status
projetc9/: Makefile  config.status  projetc.glade.bak
projetc9/src/: Makefile  Makefile.am  Reclamations.txt  alarme.c  alarme.h  callbacks.c  interface.c  interface.c.bak  projetc  user.h
(+83 files in other folders)
